--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.page {
+  min-height: 90vh;
+  padding: 2vh 4vw;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.btn {
+  padding: 6px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  border: none;
+  font-size: 1rem;
+  font-weight: 600;
+  width: 120px;
+  transition: 0.25 all ease;
+}
+
+.btn:disabled {
+  opacity: 0.75;
+  cursor: not-allowed;
+}
+
+.btn-success {
+  background-color: #298f1b;
+  color: #fff;
+}
+
+.btn-danger {
+  background-color: #9e1708;
+  color: #fff;
+}
+
+.link-container {
+  height: 100%;
+}
+
+.tab-link {
+  text-decoration: none;
+  color: #000;
+  transition: 0.2s all ease;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+}
+
+.tab-link:hover {
+  background-color: #adadad;
+}
+
+.tab-link-active {
+  font-weight: 700;
 }
